# altair

./: .gitignore  Cargo.toml  README.md  truffle-config.js
account-proof-geyser/: Cargo.toml
account-proof-geyser/src/: config.rs  lib.rs  util.rs
client/: Cargo.toml  package-lock.json  package.json
client/src/: App.js  artTokenConfig.js  auctionConfig.js  config.js  index.js  lib.rs  main.rs
client/src/actions/: artTokenAction.js  blockchainAction.js  loadBlockchainAction.js
client/src/assets/: auctionContent.json
client/src/components/: AuctionDetail.js  BidModal.js  Carouselmage.js  DisplayPrice.js  GlobalStyle.js  IpfsForm.js  Loader.js  MediaCard.js  Nav.js  Progress.js  SignIn.js  SignUp.js  SpeedDials.js  UploadArt.js
client/src/pages/: Auction.js  AuctionDetail.js  Home.js  MyCollection.js  MyPage.js  Upload.js  UploadPage.js  home.js
client/src/reducers/: artTokenReducer.js  index.js  loadBlockchainReducer.js  loaderProducer.js  modalReducer.js  progressReducer.js
client/src/shred/: legacy.rs  merkle.rs  mod.rs  shred_code.rs  shred_data.rs
contracts/: ArtToken.sol  Auction.sol
examples/: long_uri.rs  serde_array_query.rs
migrations/: 2_auction_migration.js
onchain-program/: Cargo.toml
onchain-program/src/: instructions.rs  lib.rs
scripts/: build-program.sh  copy-pda.sh  deploy.sh  run.sh
src/: error.rs  instruction.rs  lib.rs  main.rs  processor.rs  state.rs
src/shred/: legacy.rs  merkle.rs  mod.rs  shred_code.rs  shred_data.rs
test/: ArtToken.test.js  Auction.test.js
