[workspace]   
members = [ "account-proof-geyser",
	"client",
	"onchain-program"
] 

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.80"
borsh = "1.3.1"
borsh-derive = "1.3.1"
futures-util = "0.3.30"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
solana-ledger = "1.18.3"
solana-program = "1.18.4"
solana-sdk = "1.18.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
