[package]
name = "account-proof-geyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
blake3 = "1.5.0"
borsh = { workspace = true }
log = "0.4.21"
rayon = "1.9.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-accounts-db = "1.18.4"
solana-geyser-plugin-interface = "1.18.4"
solana-logger = "1.18.4"
solana-sdk = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand.workspace = true
