[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"

[[bin]]
name = "client"

[dependencies]
account-proof-geyser = { path = "../account-proof-geyser" }
anyhow = { workspace = true }
borsh = { workspace = true }
clap = { version = "4.5.2", features = ["derive"] }
futures-util = { workspace = true }
onchain-program = { path = "../onchain-program" }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-ledger = { workspace = true }
solana-rpc-client = "1.18.4"
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }

